# Hyprkube

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/: dependabot.yml
src/: App.css  App.module.css  App.tsx  AppShell.module.css  AppShell.tsx  index.css  main.tsx  monaco.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/scripts/builtin/: main.rhai
src-tauri/scripts/core/menus/: 000-common.rhai  100-pod-containers.rhai  110-pod-related-persistentvolumeclaims.rhai  110-pod-related-secrets.rhai  200-configmap-secret-data.rhai
src-tauri/scripts/core/presentations/: configmaps.v1.rhai  deployments.apps.v1.rhai  namespaces.v1.rhai  nodes.v1.rhai  persistentvolumeclaims.v1.rhai  persistentvolumes.v1.rhai  pods.v1.rhai  secrets.v1.rhai  services.v1.rhai
src-tauri/src/: app_state.rs  dirs.rs  kubers.rs  lib.rs  logging.rs  main.rs  menu_handler.rs  menus.rs  panic_handler.rs
src-tauri/src/app_features/: mod.rs
src-tauri/src/app_features/cluster_profiles/: cluster_profile_commands.rs  cluster_profile_registry.rs  gvk_commands.rs  gvk_service.rs  mod.rs
src-tauri/src/app_state/: channel_tasks.rs  cluster_state_registry.rs  exec_sessions.rs  join_handle_store.rs  kubernetes_client_registry.rs  manager_ext.rs  mod.rs  renderer_registry.rs  state_facade.rs
src-tauri/src/cluster_discovery/: commands.rs  mod.rs  model.rs  state.rs
src-tauri/src/cluster_profiles/: cluster_profile_commands.rs  cluster_profile_registry.rs  gvk_commands.rs  gvk_service.rs  mod.rs
src-tauri/src/frontend_commands/: apply_resource_yaml.rs  cleanup_channel.rs  decode_secret_key.rs  delete_resource.rs  discover_contexts.rs  discover_kubernetes_cluster.rs  get_resource_yaml.rs  initialize_kube_client.rs  kube_discover.rs  kube_stream_podlogs.rs  kube_watch_gvk.rs  list_pod_container_names.rs  list_resource_presentations.rs  list_resource_views.rs  list_secret_keys.rs  logging.rs  mod.rs  pod_exec.rs  restart.rs  watch_gvk_plain.rs  watch_gvk_with_presentation.rs  watch_gvk_with_view.rs  watch_namespaces.rs
src-tauri/src/frontend_commands/context_menu/: kubernetes_resource.rs  mod.rs
src-tauri/src/frontend_types/: backend_error.rs  backend_panic.rs  frontend_value.rs  kubernetes_client.rs  mod.rs  resource_event.rs
src-tauri/src/internal/: gvk_extraction.rs  mini_id.rs  mod.rs  resources.rs  tracing.rs
src-tauri/src/persistence/: apiserver_version_cache_service.rs  cluster_profile_service.rs  discovery_cache_service.rs  gvk_service.rs  mod.rs  repository.rs  to_flat_string.rs
src-tauri/src/resource_menu/: api.rs  basic_resource_menu.rs  commands.rs  data_keys_resource_menu.rs  dynamic_resource_menu.rs  menu_handler.rs  mod.rs  pod_resource_menu.rs  rollout_restart_resource_menu.rs
src-tauri/src/resource_menu/scripting/: mod.rs  rhai_scripted_menu_action.rs
src-tauri/src/resource_rendering/: crd_renderer.rs  fallback_resource_renderer.rs  frontend.rs  mod.rs  renderer_registry.rs  resource_view_definition.rs  scripted_resource_renderer.rs
src-tauri/src/resource_rendering/scripting/: types.rs
src-tauri/src/resource_rendering/scripting/components/: colored_box.rs  colored_boxes.rs  hyperlink.rs  mod.rs  relative_time.rs  text.rs
src-tauri/src/resource_views/: mod.rs  resource_view.rs  resource_view_definition.rs
src-tauri/src/scripting/: commons.rs  hyprkube_rhai_engine.rs  mod.rs  resource_context_menu_facade.rs  resource_presentation_facade.rs  scripting_facade.rs  scripts_provider.rs  todo.md
src-tauri/src/scripting/modules/: base64.rs  clipboard.rs  frontend.rs  kube.rs  mod.rs
src-tauri/src/scripting/resource_context_menu/: context_menu_section.rs  frontend_types.rs  mod.rs
src-tauri/src/scripting/types/: action_button.rs  colored_box.rs  colored_boxes.rs  column_template.rs  commons.rs  hyperlink.rs  menu_item.rs  menu_section.rs  mod.rs  properties.rs  relative_time.rs  resource_kind.rs  resource_presentation.rs  resource_presentation_field.rs  resource_ref.rs  resource_submenu.rs  resource_view_field.rs  sub_menu.rs  text.rs  view_component.rs
src-tauri/src/scripting/types/resource_context_menus/: action_button.rs  column_template.rs  menu_item.rs  menu_section.rs  mod.rs  resource_submenu.rs  sub_menu.rs
src-tauri/src/scripting/types/resource_presentations/: colored_box.rs  colored_boxes.rs  hyperlink.rs  mod.rs  presentation_component.rs  relative_time.rs  resource_presentation.rs  resource_presentation_field.rs  text.rs
src-tauri/src/state/: fallback_view.rhai  mod.rs  view_registry.rs
src-tauri/views/: configmaps.v1.rhai  deployments.apps.v1.rhai  namespaces.v1.rhai  nodes.v1.rhai  persistentvolumeclaims.v1.rhai  persistentvolumes.v1.rhai  pods.v1.rhai  secrets.v1.rhai  services.v1.rhai
src-views/: pods.v1.rhai
src/api/: DiscoveredCluster.ts  KubernetesClient.ts  LogStreamEvent.ts  WatchEvent.ts
src/api/addHiddenGvk/: index.ts
src/api/addPinnedGvk/: index.ts
src/api/applyResourceYaml/: index.ts
src/api/callMenuStackAction/: index.ts
src/api/createResourceMenustack/: index.ts
src/api/decodeSecretKey/: index.ts
src/api/deleteResource/: index.ts
src/api/dropResourceMenustack/: index.ts
src/api/getApiServerGitVersion/: index.ts
src/api/getDefaultNamespace/: index.ts
src/api/getResourceYaml/: index.ts
src/api/listClusterProfiles/: index.ts
src/api/listHiddenGvks/: index.ts
src/api/listPinnedGvks/: index.ts
src/api/listPodContainerNames/: index.ts
src/api/listResourcePresentations/: index.ts
src/api/listResourceViews/: index.ts
src/api/listSecretKeys/: index.ts
src/api/podExec/: index.ts
src/api/removeHiddenGvk/: index.ts
src/utils/: isDev.ts  strings.ts
(+105 files in other folders)
