[package]
name = "hyprkube"
version = "0.1.0"
description = "A Kubernetes GUI"
authors = ["Christian Danscheid"]
license = "MIT"
repository = "https://github.com/webD97/hyprkube"
default-run = "hyprkube"
edition = "2021"
rust-version = "1.83"

[lib]
name = "hyprkube_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.2", features = [] }
kube = { version = "2.0.1", features = ["runtime", "client", "ws"] }
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
futures = { version = "0.3.31" }
tokio = { version = "1.48.0" }
tokio-util = { version = "0.7.17", features = ["compat"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
rhai = { version = "1.23.6", features = [
    "serde",
    "sync",
    "no_module",
    "no_custom_syntax",
    "no_time",
] }
dirs = "6.0.0"
scan_dir = "0.3.3"
rust-embed = "8.9.0"
tauri-plugin-shell = "2.3.3"
serde_json_path = "0.7.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
serde_yaml = "0.9.34-deprecated"
semver = "1.0.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-futures = "0.2.5"
rand = "0.9.2"
chrono = "0.4.42"
tauri-plugin-clipboard-manager = "2"
async-trait = "0.1.89"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
