[package]
name = "hyprkube"
version = "0.1.0"
description = "A Kubernetes GUI"
authors = ["Christian Danscheid"]
license = "MIT"
repository = "https://github.com/webD97/hyprkube"
default-run = "hyprkube"
edition = "2021"
rust-version = "1.86"

[lib]
name = "hyprkube_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
kube = { version = "3.0.0", features = ["runtime", "client", "ws", "gzip"] }
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }
futures = { version = "0.3.31" }
tokio = { version = "1.49.0" }
tokio-util = { version = "0.7.18", features = ["compat"] }
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["v4"] }
rhai = { version = "1.23.6", features = [
    "serde",
    "sync",
    "no_module",
    "no_custom_syntax",
    "no_time",
] }
dirs = "6.0.0"
scan_dir = "0.3.3"
rust-embed = "8.11.0"
tauri-plugin-shell = "2.3.4"
serde_json_path = "0.7.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
serde_yaml = "0.9.34-deprecated"
semver = "1.0.27"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-futures = "0.2.5"
rand = "0.9.2"
chrono = "0.4.43"
anyhow = "1.0.100"
async-stream = "0.3.6"
tokio-stream = "0.1.18"
tauri-plugin-clipboard-manager = "2"
async-trait = "0.1.89"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
